sistema_lenguaje_firewall.parser.web.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Lenguaje_de_firewall: peg$parseLenguaje_de_firewall },
        peg$startRuleFunction  = peg$parseLenguaje_de_firewall,

        peg$c0 = function(ast) { return { ast: ordenar_objetos(ast) } },
        peg$c1 = function(sentencias) { return sentencias.map(s => s.replace(/;$/g, "")).join(";\n") },
        peg$c2 = "{",
        peg$c3 = peg$literalExpectation("{", false),
        peg$c4 = "}",
        peg$c5 = peg$literalExpectation("}", false),
        peg$c6 = function(token1, bloque, token2) { return bloque },
        peg$c7 = function(sentencia) { return sentencia },
        peg$c8 = "en eventos",
        peg$c9 = peg$literalExpectation("en eventos", false),
        peg$c10 = "en evento",
        peg$c11 = peg$literalExpectation("en evento", false),
        peg$c12 = "on events",
        peg$c13 = peg$literalExpectation("on events", false),
        peg$c14 = "on event",
        peg$c15 = peg$literalExpectation("on event", false),
        peg$c16 = "ocurre que",
        peg$c17 = peg$literalExpectation("ocurre que", false),
        peg$c18 = "entonces",
        peg$c19 = peg$literalExpectation("entonces", false),
        peg$c20 = "then",
        peg$c21 = peg$literalExpectation("then", false),
        peg$c22 = function(token1, id, token2, eventos, token3, bloque) { return { tipo: "sentencia de regla", id, eventos, bloque, $loc: location(), $tex: text() } },
        peg$c23 = "en proceso",
        peg$c24 = peg$literalExpectation("en proceso", false),
        peg$c25 = "in process",
        peg$c26 = peg$literalExpectation("in process", false),
        peg$c27 = ":",
        peg$c28 = peg$literalExpectation(":", false),
        peg$c29 = function(token1, proceso, token2, bloque) { return proceso + ": {" + bloque + "}" },
        peg$c30 = /^[A-Za-z$_]/,
        peg$c31 = peg$classExpectation([["A", "Z"], ["a", "z"], "$", "_"], false, false),
        peg$c32 = /^[A-Za-z0-9$_]/,
        peg$c33 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "$", "_"], false, false),
        peg$c34 = function() { return text() },
        peg$c35 = "siempre",
        peg$c36 = peg$literalExpectation("siempre", false),
        peg$c37 = "anytime",
        peg$c38 = peg$literalExpectation("anytime", false),
        peg$c39 = function(token1, bloque) { return bloque },
        peg$c40 = "si",
        peg$c41 = peg$literalExpectation("si", false),
        peg$c42 = "if",
        peg$c43 = peg$literalExpectation("if", false),
        peg$c44 = function(token1, condicion, token2, consecuencia, alternativas) { return "if(" + condicion + ") {" + consecuencia + "}" + (alternativas ?? "") },
        peg$c45 = function(o_si, o_si_no) { return  o_si.join("") + (o_si_no ?? "") },
        peg$c46 = "o si no entonces",
        peg$c47 = peg$literalExpectation("o si no entonces", false),
        peg$c48 = "else",
        peg$c49 = peg$literalExpectation("else", false),
        peg$c50 = function(token1, consecuencia) { return "\n  else {" + consecuencia + "}" },
        peg$c51 = "o si",
        peg$c52 = peg$literalExpectation("o si", false),
        peg$c53 = "else if",
        peg$c54 = peg$literalExpectation("else if", false),
        peg$c55 = function(token1, condicion, token2, consecuencia) { return "\n  else if(" + condicion + ") {" + consecuencia + "}" },
        peg$c56 = function(texto) { return texto },
        peg$c57 = "{{{{",
        peg$c58 = peg$literalExpectation("{{{{", false),
        peg$c59 = "}}}}",
        peg$c60 = peg$literalExpectation("}}}}", false),
        peg$c61 = peg$anyExpectation(),
        peg$c62 = "{{{",
        peg$c63 = peg$literalExpectation("{{{", false),
        peg$c64 = "}}}",
        peg$c65 = peg$literalExpectation("}}}", false),
        peg$c66 = "{{",
        peg$c67 = peg$literalExpectation("{{", false),
        peg$c68 = "}}",
        peg$c69 = peg$literalExpectation("}}", false),
        peg$c70 = "@{",
        peg$c71 = peg$literalExpectation("@{", false),
        peg$c72 = "[:",
        peg$c73 = peg$literalExpectation("[:", false),
        peg$c74 = ":]",
        peg$c75 = peg$literalExpectation(":]", false),
        peg$c76 = "[[[[",
        peg$c77 = peg$literalExpectation("[[[[", false),
        peg$c78 = "]]]]",
        peg$c79 = peg$literalExpectation("]]]]", false),
        peg$c80 = "[[[",
        peg$c81 = peg$literalExpectation("[[[", false),
        peg$c82 = "]]]",
        peg$c83 = peg$literalExpectation("]]]", false),
        peg$c84 = "[[",
        peg$c85 = peg$literalExpectation("[[", false),
        peg$c86 = "]]",
        peg$c87 = peg$literalExpectation("]]", false),
        peg$c88 = "[",
        peg$c89 = peg$literalExpectation("[", false),
        peg$c90 = "]",
        peg$c91 = peg$literalExpectation("]", false),
        peg$c92 = "not",
        peg$c93 = peg$literalExpectation("not", false),
        peg$c94 = "no",
        peg$c95 = peg$literalExpectation("no", false),
        peg$c96 = "!",
        peg$c97 = peg$literalExpectation("!", false),
        peg$c98 = function(token1, negacion, expres, extras) { return (negacion ? "!" : "") + expres + (extras ?? "") },
        peg$c99 = "(",
        peg$c100 = peg$literalExpectation("(", false),
        peg$c101 = ")",
        peg$c102 = peg$literalExpectation(")", false),
        peg$c103 = function(negacion, token1, expres, token3, extras) { return (negacion ? "!" : "") + "(" + expres + ")" + (extras ?? ""); },
        peg$c104 = "and",
        peg$c105 = peg$literalExpectation("and", false),
        peg$c106 = "or",
        peg$c107 = peg$literalExpectation("or", false),
        peg$c108 = "y",
        peg$c109 = peg$literalExpectation("y", false),
        peg$c110 = "o",
        peg$c111 = peg$literalExpectation("o", false),
        peg$c112 = function(token1, op, token2, expres) { return (op === "y" ? " && " : " || ") + expres },
        peg$c113 = "\t",
        peg$c114 = peg$literalExpectation("\t", false),
        peg$c115 = " ",
        peg$c116 = peg$literalExpectation(" ", false),
        peg$c117 = "\r\n",
        peg$c118 = peg$literalExpectation("\r\n", false),
        peg$c119 = "\r",
        peg$c120 = peg$literalExpectation("\r", false),
        peg$c121 = "\n",
        peg$c122 = peg$literalExpectation("\n", false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLenguaje_de_firewall() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSentencia_de_escucha_a_evento();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSentencia_de_escucha_a_evento();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBloque_normal() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSentencia_de_bloque();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSentencia_de_bloque();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBloque_normal_entre_parentesis_curvados() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$parse_();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s3 = peg$c2;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseBloque_normal();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s5 = peg$c4;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentencia_de_bloque() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseSentencia_de_proceso();
      if (s1 === peg$FAILED) {
        s1 = peg$parseSentencia_de_siempre();
        if (s1 === peg$FAILED) {
          s1 = peg$parseSentencia_de_si();
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseSentencia_de_escucha_a_evento() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTexto_en_parentesis_cuadrados_n();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 10) === peg$c8) {
              s5 = peg$c8;
              peg$currPos += 10;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s5 === peg$FAILED) {
              if (input.substr(peg$currPos, 9) === peg$c10) {
                s5 = peg$c10;
                peg$currPos += 9;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s5 === peg$FAILED) {
                if (input.substr(peg$currPos, 9) === peg$c12) {
                  s5 = peg$c12;
                  peg$currPos += 9;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                }
                if (s5 === peg$FAILED) {
                  if (input.substr(peg$currPos, 8) === peg$c14) {
                    s5 = peg$c14;
                    peg$currPos += 8;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c15); }
                  }
                }
              }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parse_();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parse_();
              }
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseTexto_en_parentesis_curvados_n();
            if (s4 !== peg$FAILED) {
              s5 = peg$currPos;
              s6 = [];
              s7 = peg$parse_();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parse_();
              }
              if (s6 !== peg$FAILED) {
                if (input.substr(peg$currPos, 10) === peg$c16) {
                  s7 = peg$c16;
                  peg$currPos += 10;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c17); }
                }
                if (s7 === peg$FAILED) {
                  if (input.substr(peg$currPos, 8) === peg$c18) {
                    s7 = peg$c18;
                    peg$currPos += 8;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                  }
                  if (s7 === peg$FAILED) {
                    if (input.substr(peg$currPos, 4) === peg$c20) {
                      s7 = peg$c20;
                      peg$currPos += 4;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c21); }
                    }
                  }
                }
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parse_();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parse_();
                  }
                  if (s8 !== peg$FAILED) {
                    s6 = [s6, s7, s8];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseBloque_normal_entre_parentesis_curvados();
                if (s6 === peg$FAILED) {
                  s6 = peg$parseBloque_de_js();
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c22(s1, s2, s3, s4, s5, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentencia_de_proceso() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
